--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,9 @@ body {
 .key {
   font-size: inherit;
   grid-column: span 2;
-  border: none;
+  border: 0;
   padding: 0;
+    margin: 0 3px 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +38,7 @@ body {
   color: white;
   fill: white;
   text-transform: uppercase;
-  border-radius: .25em;
+  border-radius: 4px;
   cursor: pointer;
   user-select: none;
 }
@@ -76,8 +77,8 @@ body {
   justify-content: center;
   align-content: center;
   flex-grow: 1;
-  grid-template-columns: repeat(5, 4em);
-  grid-template-rows: repeat(6, 4em);
+  grid-template-columns: repeat(5, 4.5em);
+  grid-template-rows: repeat(6, 4.5em);
   gap: .25em;
   margin-bottom: 1em;
 }
